# pico-tachometer

./: .gitignore  CMakeLists.txt  Makefile  calculation.c  font.c  global.c  global.h  kiss_fft.c  kiss_fftr.c  main.c  ssh1106.c  tachometer.c
include/: calculation.h  communication.h  font.h  global.h  gpio_configuration.h  sine_wave.h  ssh1106.h
include/pico/: _kiss_fft_guts.h  fft.h  kiss_fft.h  kiss_fftr.h
pc_debug/: accuracy.py  calculate_frequency.py  freq2_test.py  freq_test.py  gui_main.py  main.py  parareltest.py  pwm.py  requirements.txt  signal_generator.py
pc_debug/symulacje/: array_export.h  array_export2.h  array_export250-300.h  array_export250-500.h  array_exportIiIIIr.h  array_exportIir.h  array_exportfir.h  calculation.h  global.h  main.c
